--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f0f0f0;
 }
 
 a {
@@ -13,4 +14,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  text-shadow: 9px 5px 8px #C8C8C8;
+  text-align: center;
+  margin-top: 0;
 }
